Updated the significance threshold to account for correction

--- a/3.interpret_models/linear_reg_plate_1_2_norm_data/feature_importances/make_volcano.ipynb
+++ b/3.interpret_models/linear_reg_plate_1_2_norm_data/feature_importances/make_volcano.ipynb
@@ -16,10 +16,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:52:13.966435Z",
-     "iopub.status.busy": "2023-06-16T19:52:13.966336Z",
-     "iopub.status.idle": "2023-06-16T19:52:13.973606Z",
-     "shell.execute_reply": "2023-06-16T19:52:13.973248Z"
+     "iopub.execute_input": "2023-06-16T22:25:16.860807Z",
+     "iopub.status.busy": "2023-06-16T22:25:16.860700Z",
+     "iopub.status.idle": "2023-06-16T22:25:16.868103Z",
+     "shell.execute_reply": "2023-06-16T22:25:16.867749Z"
     },
     "jukit_cell_id": "SyZ3qa8iz3"
    },
@@ -47,10 +47,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:52:14.002691Z",
-     "iopub.status.busy": "2023-06-16T19:52:14.002530Z",
-     "iopub.status.idle": "2023-06-16T19:52:14.494053Z",
-     "shell.execute_reply": "2023-06-16T19:52:14.493593Z"
+     "iopub.execute_input": "2023-06-16T22:25:16.897944Z",
+     "iopub.status.busy": "2023-06-16T22:25:16.897539Z",
+     "iopub.status.idle": "2023-06-16T22:25:17.391335Z",
+     "shell.execute_reply": "2023-06-16T22:25:17.391014Z"
     },
     "jukit_cell_id": "FKd1dIo45E"
    },
@@ -77,10 +77,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:52:14.495708Z",
-     "iopub.status.busy": "2023-06-16T19:52:14.495404Z",
-     "iopub.status.idle": "2023-06-16T19:52:14.498168Z",
-     "shell.execute_reply": "2023-06-16T19:52:14.497849Z"
+     "iopub.execute_input": "2023-06-16T22:25:17.393166Z",
+     "iopub.status.busy": "2023-06-16T22:25:17.392844Z",
+     "iopub.status.idle": "2023-06-16T22:25:17.395502Z",
+     "shell.execute_reply": "2023-06-16T22:25:17.395240Z"
     },
     "jukit_cell_id": "zjh0SKYFgl"
    },
@@ -118,10 +118,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:52:14.499353Z",
-     "iopub.status.busy": "2023-06-16T19:52:14.499133Z",
-     "iopub.status.idle": "2023-06-16T19:52:14.501145Z",
-     "shell.execute_reply": "2023-06-16T19:52:14.500844Z"
+     "iopub.execute_input": "2023-06-16T22:25:17.396688Z",
+     "iopub.status.busy": "2023-06-16T22:25:17.396431Z",
+     "iopub.status.idle": "2023-06-16T22:25:17.398343Z",
+     "shell.execute_reply": "2023-06-16T22:25:17.398092Z"
     },
     "jukit_cell_id": "CbTwVL3qAB"
    },
@@ -152,10 +152,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:52:14.502390Z",
-     "iopub.status.busy": "2023-06-16T19:52:14.502184Z",
-     "iopub.status.idle": "2023-06-16T19:52:14.507280Z",
-     "shell.execute_reply": "2023-06-16T19:52:14.506976Z"
+     "iopub.execute_input": "2023-06-16T22:25:17.399550Z",
+     "iopub.status.busy": "2023-06-16T22:25:17.399277Z",
+     "iopub.status.idle": "2023-06-16T22:25:17.404486Z",
+     "shell.execute_reply": "2023-06-16T22:25:17.404207Z"
     },
     "jukit_cell_id": "aYwhtTNAgx"
    },
@@ -183,10 +183,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:52:14.508637Z",
-     "iopub.status.busy": "2023-06-16T19:52:14.508412Z",
-     "iopub.status.idle": "2023-06-16T19:52:14.956495Z",
-     "shell.execute_reply": "2023-06-16T19:52:14.956133Z"
+     "iopub.execute_input": "2023-06-16T22:25:17.405726Z",
+     "iopub.status.busy": "2023-06-16T22:25:17.405499Z",
+     "iopub.status.idle": "2023-06-16T22:25:17.860624Z",
+     "shell.execute_reply": "2023-06-16T22:25:17.860271Z"
     },
     "jukit_cell_id": "KxriUeQ8di"
    },
@@ -204,8 +204,7 @@
    ],
    "source": [
     "# Set significance threshold and fold change threshold\n",
-    "significance_threshold = -np.log10(0.05)\n",
-    "fold_change_threshold = 1.0\n",
+    "significance_threshold = -np.log10(concatenated_df[\"critical_threshold\"].iloc[0])\n",
     "colors = [\"#ca0020\", \"#f4a582\", \"#92c5de\", \"#0571b0\"]\n",
     "\n",
     "# Set the figure size\n",
