--- a/3.interpret_models/linear_reg_plate_1_2_norm_data/feature_importances/seperate_compartments.ipynb
+++ b/3.interpret_models/linear_reg_plate_1_2_norm_data/feature_importances/seperate_compartments.ipynb
@@ -14,10 +14,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:52:15.851942Z",
-     "iopub.status.busy": "2023-06-16T19:52:15.851826Z",
-     "iopub.status.idle": "2023-06-16T19:52:15.859144Z",
-     "shell.execute_reply": "2023-06-16T19:52:15.858811Z"
+     "iopub.execute_input": "2023-06-16T22:25:18.759159Z",
+     "iopub.status.busy": "2023-06-16T22:25:18.759051Z",
+     "iopub.status.idle": "2023-06-16T22:25:18.764784Z",
+     "shell.execute_reply": "2023-06-16T22:25:18.764461Z"
     },
     "jukit_cell_id": "SyZ3qa8iz3"
    },
@@ -45,10 +45,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:52:15.861242Z",
-     "iopub.status.busy": "2023-06-16T19:52:15.860922Z",
-     "iopub.status.idle": "2023-06-16T19:52:16.033021Z",
-     "shell.execute_reply": "2023-06-16T19:52:16.032696Z"
+     "iopub.execute_input": "2023-06-16T22:25:18.766292Z",
+     "iopub.status.busy": "2023-06-16T22:25:18.766075Z",
+     "iopub.status.idle": "2023-06-16T22:25:18.936627Z",
+     "shell.execute_reply": "2023-06-16T22:25:18.936184Z"
     },
     "jukit_cell_id": "FKd1dIo45E"
    },
@@ -73,10 +73,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:52:16.034583Z",
-     "iopub.status.busy": "2023-06-16T19:52:16.034291Z",
-     "iopub.status.idle": "2023-06-16T19:52:16.036833Z",
-     "shell.execute_reply": "2023-06-16T19:52:16.036578Z"
+     "iopub.execute_input": "2023-06-16T22:25:18.938290Z",
+     "iopub.status.busy": "2023-06-16T22:25:18.937957Z",
+     "iopub.status.idle": "2023-06-16T22:25:18.940645Z",
+     "shell.execute_reply": "2023-06-16T22:25:18.940279Z"
     },
     "jukit_cell_id": "zjh0SKYFgl"
    },
@@ -114,10 +114,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:52:16.038007Z",
-     "iopub.status.busy": "2023-06-16T19:52:16.037752Z",
-     "iopub.status.idle": "2023-06-16T19:52:16.039716Z",
-     "shell.execute_reply": "2023-06-16T19:52:16.039468Z"
+     "iopub.execute_input": "2023-06-16T22:25:18.941916Z",
+     "iopub.status.busy": "2023-06-16T22:25:18.941701Z",
+     "iopub.status.idle": "2023-06-16T22:25:18.943850Z",
+     "shell.execute_reply": "2023-06-16T22:25:18.943538Z"
     },
     "jukit_cell_id": "W8zS6OpdNq"
    },
@@ -147,10 +147,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:52:16.040837Z",
-     "iopub.status.busy": "2023-06-16T19:52:16.040599Z",
-     "iopub.status.idle": "2023-06-16T19:52:16.045245Z",
-     "shell.execute_reply": "2023-06-16T19:52:16.045011Z"
+     "iopub.execute_input": "2023-06-16T22:25:18.945264Z",
+     "iopub.status.busy": "2023-06-16T22:25:18.944957Z",
+     "iopub.status.idle": "2023-06-16T22:25:18.950039Z",
+     "shell.execute_reply": "2023-06-16T22:25:18.949744Z"
     },
     "jukit_cell_id": "aYwhtTNAgx"
    },
@@ -180,10 +180,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:52:16.046464Z",
-     "iopub.status.busy": "2023-06-16T19:52:16.046245Z",
-     "iopub.status.idle": "2023-06-16T19:52:16.049887Z",
-     "shell.execute_reply": "2023-06-16T19:52:16.049630Z"
+     "iopub.execute_input": "2023-06-16T22:25:18.951352Z",
+     "iopub.status.busy": "2023-06-16T22:25:18.951107Z",
+     "iopub.status.idle": "2023-06-16T22:25:18.954874Z",
+     "shell.execute_reply": "2023-06-16T22:25:18.954519Z"
     },
     "jukit_cell_id": "wSEsy3OWnz"
    },
@@ -213,10 +213,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:52:16.051080Z",
-     "iopub.status.busy": "2023-06-16T19:52:16.050795Z",
-     "iopub.status.idle": "2023-06-16T19:52:16.056513Z",
-     "shell.execute_reply": "2023-06-16T19:52:16.056275Z"
+     "iopub.execute_input": "2023-06-16T22:25:18.956286Z",
+     "iopub.status.busy": "2023-06-16T22:25:18.956075Z",
+     "iopub.status.idle": "2023-06-16T22:25:18.962119Z",
+     "shell.execute_reply": "2023-06-16T22:25:18.961789Z"
     },
     "jukit_cell_id": "CQscjFvYen"
    },
@@ -262,10 +262,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:52:16.057760Z",
-     "iopub.status.busy": "2023-06-16T19:52:16.057537Z",
-     "iopub.status.idle": "2023-06-16T19:52:16.061890Z",
-     "shell.execute_reply": "2023-06-16T19:52:16.061637Z"
+     "iopub.execute_input": "2023-06-16T22:25:18.963518Z",
+     "iopub.status.busy": "2023-06-16T22:25:18.963263Z",
+     "iopub.status.idle": "2023-06-16T22:25:18.967690Z",
+     "shell.execute_reply": "2023-06-16T22:25:18.967364Z"
     },
     "jukit_cell_id": "iTJOXFvhuT"
    },
@@ -274,13 +274,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21674/1993350327.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_31715/1993350327.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  compartment_data[compartment][\"compartment\"] = len(df) * [compartment]\n",
-      "/tmp/ipykernel_21674/1993350327.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_31715/1993350327.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -322,10 +322,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:52:16.063083Z",
-     "iopub.status.busy": "2023-06-16T19:52:16.062826Z",
-     "iopub.status.idle": "2023-06-16T19:52:16.077540Z",
-     "shell.execute_reply": "2023-06-16T19:52:16.077293Z"
+     "iopub.execute_input": "2023-06-16T22:25:18.969015Z",
+     "iopub.status.busy": "2023-06-16T22:25:18.968812Z",
+     "iopub.status.idle": "2023-06-16T22:25:18.984975Z",
+     "shell.execute_reply": "2023-06-16T22:25:18.984671Z"
     },
     "jukit_cell_id": "NUwlraBlOz"
    },
@@ -333,8 +333,11 @@
    "source": [
     "concatenated_df.to_csv(output_path, sep=\"\\t\", index=False)\n",
     "\n",
+    "# Define the critical threshold\n",
+    "critical_threshold = concatenated_df[\"critical_threshold\"].iloc[0]\n",
+    "\n",
     "# Create a dataframe with only significant models\n",
-    "concatenated_df.loc[concatenated_df[\"corrected_p_value\"] <= 0.05].to_csv(\n",
+    "concatenated_df.loc[concatenated_df[\"corrected_p_value\"] <= critical_threshold].to_csv(\n",
     "    sig_output_path, sep=\"\\t\", index=False\n",
     ")"
    ]
