Changed file heading

--- a/2.evaluate_models/log_reg_plate_1_cp_fs_data/evaluate_model.ipynb
+++ b/2.evaluate_models/log_reg_plate_1_cp_fs_data/evaluate_model.ipynb
@@ -6,7 +6,7 @@
     "jukit_cell_id": "AAuDgo76ka"
    },
    "source": [
-    "# Determine the best features using a Logistic Regression Model"
+    "# Evaluate the performance of the logistic regression on plate 2 data"
    ]
   },
   {
@@ -23,10 +23,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:30:16.831597Z",
-     "iopub.status.busy": "2023-06-27T21:30:16.831202Z",
-     "iopub.status.idle": "2023-06-27T21:30:17.416357Z",
-     "shell.execute_reply": "2023-06-27T21:30:17.415992Z"
+     "iopub.execute_input": "2023-06-27T21:46:55.070541Z",
+     "iopub.status.busy": "2023-06-27T21:46:55.070389Z",
+     "iopub.status.idle": "2023-06-27T21:46:55.639652Z",
+     "shell.execute_reply": "2023-06-27T21:46:55.639201Z"
     },
     "jukit_cell_id": "FKd1dIo45E"
    },
@@ -69,10 +69,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:30:17.418218Z",
-     "iopub.status.busy": "2023-06-27T21:30:17.418036Z",
-     "iopub.status.idle": "2023-06-27T21:30:17.420927Z",
-     "shell.execute_reply": "2023-06-27T21:30:17.420673Z"
+     "iopub.execute_input": "2023-06-27T21:46:55.641305Z",
+     "iopub.status.busy": "2023-06-27T21:46:55.641143Z",
+     "iopub.status.idle": "2023-06-27T21:46:55.643881Z",
+     "shell.execute_reply": "2023-06-27T21:46:55.643527Z"
     },
     "jukit_cell_id": "Xa65DpKBxU"
    },
@@ -110,10 +110,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:30:17.422252Z",
-     "iopub.status.busy": "2023-06-27T21:30:17.422157Z",
-     "iopub.status.idle": "2023-06-27T21:30:17.424080Z",
-     "shell.execute_reply": "2023-06-27T21:30:17.423835Z"
+     "iopub.execute_input": "2023-06-27T21:46:55.645425Z",
+     "iopub.status.busy": "2023-06-27T21:46:55.645163Z",
+     "iopub.status.idle": "2023-06-27T21:46:55.647166Z",
+     "shell.execute_reply": "2023-06-27T21:46:55.646847Z"
     },
     "jukit_cell_id": "EBc3nCzByb"
    },
@@ -137,10 +137,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:30:17.425582Z",
-     "iopub.status.busy": "2023-06-27T21:30:17.425430Z",
-     "iopub.status.idle": "2023-06-27T21:30:17.427416Z",
-     "shell.execute_reply": "2023-06-27T21:30:17.427187Z"
+     "iopub.execute_input": "2023-06-27T21:46:55.648568Z",
+     "iopub.status.busy": "2023-06-27T21:46:55.648367Z",
+     "iopub.status.idle": "2023-06-27T21:46:55.650457Z",
+     "shell.execute_reply": "2023-06-27T21:46:55.650126Z"
     },
     "jukit_cell_id": "NDJW3zy2NA"
    },
@@ -168,10 +168,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:30:17.428635Z",
-     "iopub.status.busy": "2023-06-27T21:30:17.428422Z",
-     "iopub.status.idle": "2023-06-27T21:30:17.439418Z",
-     "shell.execute_reply": "2023-06-27T21:30:17.439157Z"
+     "iopub.execute_input": "2023-06-27T21:46:55.651831Z",
+     "iopub.status.busy": "2023-06-27T21:46:55.651619Z",
+     "iopub.status.idle": "2023-06-27T21:46:55.662795Z",
+     "shell.execute_reply": "2023-06-27T21:46:55.662437Z"
     },
     "jukit_cell_id": "sgPsexjO8l"
    },
@@ -196,10 +196,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:30:17.440585Z",
-     "iopub.status.busy": "2023-06-27T21:30:17.440485Z",
-     "iopub.status.idle": "2023-06-27T21:30:17.448240Z",
-     "shell.execute_reply": "2023-06-27T21:30:17.447888Z"
+     "iopub.execute_input": "2023-06-27T21:46:55.664400Z",
+     "iopub.status.busy": "2023-06-27T21:46:55.664083Z",
+     "iopub.status.idle": "2023-06-27T21:46:55.671900Z",
+     "shell.execute_reply": "2023-06-27T21:46:55.671466Z"
     },
     "jukit_cell_id": "BP5Np3dOUT"
    },
@@ -243,10 +243,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:30:17.477423Z",
-     "iopub.status.busy": "2023-06-27T21:30:17.476983Z",
-     "iopub.status.idle": "2023-06-27T21:30:17.484570Z",
-     "shell.execute_reply": "2023-06-27T21:30:17.484215Z"
+     "iopub.execute_input": "2023-06-27T21:46:55.700604Z",
+     "iopub.status.busy": "2023-06-27T21:46:55.700277Z",
+     "iopub.status.idle": "2023-06-27T21:46:55.706501Z",
+     "shell.execute_reply": "2023-06-27T21:46:55.706092Z"
     },
     "jukit_cell_id": "5mJKNwXgWE"
    },
@@ -280,10 +280,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:30:17.486879Z",
-     "iopub.status.busy": "2023-06-27T21:30:17.486172Z",
-     "iopub.status.idle": "2023-06-27T21:30:17.626424Z",
-     "shell.execute_reply": "2023-06-27T21:30:17.626138Z"
+     "iopub.execute_input": "2023-06-27T21:46:55.708391Z",
+     "iopub.status.busy": "2023-06-27T21:46:55.708030Z",
+     "iopub.status.idle": "2023-06-27T21:46:55.847548Z",
+     "shell.execute_reply": "2023-06-27T21:46:55.847309Z"
     },
     "jukit_cell_id": "JYWmIWvfZH"
    },
@@ -330,10 +330,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:30:17.627758Z",
-     "iopub.status.busy": "2023-06-27T21:30:17.627509Z",
-     "iopub.status.idle": "2023-06-27T21:30:17.632883Z",
-     "shell.execute_reply": "2023-06-27T21:30:17.632622Z"
+     "iopub.execute_input": "2023-06-27T21:46:55.848621Z",
+     "iopub.status.busy": "2023-06-27T21:46:55.848520Z",
+     "iopub.status.idle": "2023-06-27T21:46:55.853795Z",
+     "shell.execute_reply": "2023-06-27T21:46:55.853557Z"
     },
     "jukit_cell_id": "fsj5ZFlKTq"
    },
@@ -368,10 +368,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:30:17.634255Z",
-     "iopub.status.busy": "2023-06-27T21:30:17.634036Z",
-     "iopub.status.idle": "2023-06-27T21:30:17.850761Z",
-     "shell.execute_reply": "2023-06-27T21:30:17.850498Z"
+     "iopub.execute_input": "2023-06-27T21:46:55.855160Z",
+     "iopub.status.busy": "2023-06-27T21:46:55.854873Z",
+     "iopub.status.idle": "2023-06-27T21:46:56.066074Z",
+     "shell.execute_reply": "2023-06-27T21:46:56.065817Z"
     },
     "jukit_cell_id": "EwR4ysDger"
    },
