Removed unused imports and variables

--- a/1.train_models/log_reg_plate_1_cp_fs_data/train_model.ipynb
+++ b/1.train_models/log_reg_plate_1_cp_fs_data/train_model.ipynb
@@ -23,36 +23,25 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T20:46:53.065380Z",
-     "iopub.status.busy": "2023-06-27T20:46:53.065228Z",
-     "iopub.status.idle": "2023-06-27T20:46:53.635382Z",
-     "shell.execute_reply": "2023-06-27T20:46:53.634854Z"
+     "iopub.execute_input": "2023-06-29T21:00:18.823098Z",
+     "iopub.status.busy": "2023-06-29T21:00:18.822988Z",
+     "iopub.status.idle": "2023-06-29T21:00:19.209026Z",
+     "shell.execute_reply": "2023-06-29T21:00:19.208627Z"
     },
     "jukit_cell_id": "FKd1dIo45E"
    },
    "outputs": [],
    "source": [
-    "import sys\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
-    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "from sklearn.metrics import (\n",
-    "    confusion_matrix,\n",
-    "    ConfusionMatrixDisplay,\n",
-    "    precision_score,\n",
-    "    accuracy_score,\n",
-    "    classification_report,\n",
-    ")\n",
     "from sklearn.model_selection import train_test_split, KFold\n",
-    "from collections import Counter\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "\n",
-    "from joblib import dump, load"
+    "from joblib import dump"
    ]
   },
   {
@@ -69,10 +58,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T20:46:53.637306Z",
-     "iopub.status.busy": "2023-06-27T20:46:53.637100Z",
-     "iopub.status.idle": "2023-06-27T20:46:53.640059Z",
-     "shell.execute_reply": "2023-06-27T20:46:53.639755Z"
+     "iopub.execute_input": "2023-06-29T21:00:19.210977Z",
+     "iopub.status.busy": "2023-06-29T21:00:19.210667Z",
+     "iopub.status.idle": "2023-06-29T21:00:19.213370Z",
+     "shell.execute_reply": "2023-06-29T21:00:19.213057Z"
     },
     "jukit_cell_id": "Iz4nqgONsd"
    },
@@ -110,10 +99,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T20:46:53.641337Z",
-     "iopub.status.busy": "2023-06-27T20:46:53.641126Z",
-     "iopub.status.idle": "2023-06-27T20:46:53.643101Z",
-     "shell.execute_reply": "2023-06-27T20:46:53.642780Z"
+     "iopub.execute_input": "2023-06-29T21:00:19.214826Z",
+     "iopub.status.busy": "2023-06-29T21:00:19.214601Z",
+     "iopub.status.idle": "2023-06-29T21:00:19.216594Z",
+     "shell.execute_reply": "2023-06-29T21:00:19.216300Z"
     },
     "jukit_cell_id": "EBc3nCzByb"
    },
@@ -137,10 +126,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T20:46:53.644327Z",
-     "iopub.status.busy": "2023-06-27T20:46:53.644057Z",
-     "iopub.status.idle": "2023-06-27T20:46:53.646229Z",
-     "shell.execute_reply": "2023-06-27T20:46:53.645930Z"
+     "iopub.execute_input": "2023-06-29T21:00:19.217882Z",
+     "iopub.status.busy": "2023-06-29T21:00:19.217636Z",
+     "iopub.status.idle": "2023-06-29T21:00:19.219821Z",
+     "shell.execute_reply": "2023-06-29T21:00:19.219527Z"
     },
     "jukit_cell_id": "EYGHUOxuTt"
    },
@@ -173,10 +162,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T20:46:53.647372Z",
-     "iopub.status.busy": "2023-06-27T20:46:53.647124Z",
-     "iopub.status.idle": "2023-06-27T20:46:53.674576Z",
-     "shell.execute_reply": "2023-06-27T20:46:53.674249Z"
+     "iopub.execute_input": "2023-06-29T21:00:19.221084Z",
+     "iopub.status.busy": "2023-06-29T21:00:19.220867Z",
+     "iopub.status.idle": "2023-06-29T21:00:19.247147Z",
+     "shell.execute_reply": "2023-06-29T21:00:19.246875Z"
     },
     "jukit_cell_id": "A8cPG2OifP"
    },
@@ -209,10 +198,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T20:46:53.676107Z",
-     "iopub.status.busy": "2023-06-27T20:46:53.675823Z",
-     "iopub.status.idle": "2023-06-27T20:46:53.677857Z",
-     "shell.execute_reply": "2023-06-27T20:46:53.677563Z"
+     "iopub.execute_input": "2023-06-29T21:00:19.248576Z",
+     "iopub.status.busy": "2023-06-29T21:00:19.248416Z",
+     "iopub.status.idle": "2023-06-29T21:00:19.250329Z",
+     "shell.execute_reply": "2023-06-29T21:00:19.250094Z"
     },
     "jukit_cell_id": "jH432rS91v"
    },
@@ -223,8 +212,7 @@
     "\n",
     "# These represent the fractions of the entire dataset\n",
     "train_val_frac = 0.85\n",
-    "test_frac = 1 - train_val_frac\n",
-    "val_frac = 0.15"
+    "test_frac = 1 - train_val_frac"
    ]
   },
   {
@@ -241,10 +229,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T20:46:53.679004Z",
-     "iopub.status.busy": "2023-06-27T20:46:53.678799Z",
-     "iopub.status.idle": "2023-06-27T20:46:53.687405Z",
-     "shell.execute_reply": "2023-06-27T20:46:53.687108Z"
+     "iopub.execute_input": "2023-06-29T21:00:19.251428Z",
+     "iopub.status.busy": "2023-06-29T21:00:19.251216Z",
+     "iopub.status.idle": "2023-06-29T21:00:19.259897Z",
+     "shell.execute_reply": "2023-06-29T21:00:19.259630Z"
     },
     "jukit_cell_id": "6wLIrXfTzh"
    },
@@ -276,10 +264,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T20:46:53.688688Z",
-     "iopub.status.busy": "2023-06-27T20:46:53.688482Z",
-     "iopub.status.idle": "2023-06-27T20:46:53.692410Z",
-     "shell.execute_reply": "2023-06-27T20:46:53.692111Z"
+     "iopub.execute_input": "2023-06-29T21:00:19.261240Z",
+     "iopub.status.busy": "2023-06-29T21:00:19.260957Z",
+     "iopub.status.idle": "2023-06-29T21:00:19.264808Z",
+     "shell.execute_reply": "2023-06-29T21:00:19.264569Z"
     },
     "jukit_cell_id": "VNkswJFWjR"
    },
@@ -308,10 +296,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T20:46:53.693686Z",
-     "iopub.status.busy": "2023-06-27T20:46:53.693477Z",
-     "iopub.status.idle": "2023-06-27T20:46:53.696373Z",
-     "shell.execute_reply": "2023-06-27T20:46:53.696028Z"
+     "iopub.execute_input": "2023-06-29T21:00:19.265856Z",
+     "iopub.status.busy": "2023-06-29T21:00:19.265752Z",
+     "iopub.status.idle": "2023-06-29T21:00:19.268460Z",
+     "shell.execute_reply": "2023-06-29T21:00:19.268210Z"
     },
     "jukit_cell_id": "wqT9BUqx7w"
    },
@@ -320,13 +308,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_36061/4215398058.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_30430/4215398058.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  testdf[\"label\"] = le.fit_transform(testdf[target_column].values)\n",
-      "/tmp/ipykernel_36061/4215398058.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_30430/4215398058.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -355,10 +343,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T20:46:53.719203Z",
-     "iopub.status.busy": "2023-06-27T20:46:53.718943Z",
-     "iopub.status.idle": "2023-06-27T20:46:53.722009Z",
-     "shell.execute_reply": "2023-06-27T20:46:53.721673Z"
+     "iopub.execute_input": "2023-06-29T21:00:19.286824Z",
+     "iopub.status.busy": "2023-06-29T21:00:19.286545Z",
+     "iopub.status.idle": "2023-06-29T21:00:19.289608Z",
+     "shell.execute_reply": "2023-06-29T21:00:19.289363Z"
     },
     "jukit_cell_id": "UFK0jsur96"
    },
@@ -388,10 +376,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T20:46:53.723303Z",
-     "iopub.status.busy": "2023-06-27T20:46:53.723089Z",
-     "iopub.status.idle": "2023-06-27T20:46:53.726391Z",
-     "shell.execute_reply": "2023-06-27T20:46:53.726085Z"
+     "iopub.execute_input": "2023-06-29T21:00:19.290648Z",
+     "iopub.status.busy": "2023-06-29T21:00:19.290546Z",
+     "iopub.status.idle": "2023-06-29T21:00:19.293712Z",
+     "shell.execute_reply": "2023-06-29T21:00:19.293471Z"
     },
     "jukit_cell_id": "SnNRV5kCfc"
    },
@@ -455,10 +443,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T20:46:53.727548Z",
-     "iopub.status.busy": "2023-06-27T20:46:53.727297Z",
-     "iopub.status.idle": "2023-06-27T20:46:54.714430Z",
-     "shell.execute_reply": "2023-06-27T20:46:54.714071Z"
+     "iopub.execute_input": "2023-06-29T21:00:19.294815Z",
+     "iopub.status.busy": "2023-06-29T21:00:19.294565Z",
+     "iopub.status.idle": "2023-06-29T21:00:20.363695Z",
+     "shell.execute_reply": "2023-06-29T21:00:20.363342Z"
     },
     "jukit_cell_id": "4WFLztISAE"
    },
@@ -502,10 +490,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T20:46:54.716224Z",
-     "iopub.status.busy": "2023-06-27T20:46:54.715982Z",
-     "iopub.status.idle": "2023-06-27T20:46:54.722488Z",
-     "shell.execute_reply": "2023-06-27T20:46:54.722153Z"
+     "iopub.execute_input": "2023-06-29T21:00:20.365977Z",
+     "iopub.status.busy": "2023-06-29T21:00:20.365422Z",
+     "iopub.status.idle": "2023-06-29T21:00:20.371680Z",
+     "shell.execute_reply": "2023-06-29T21:00:20.371328Z"
     },
     "jukit_cell_id": "Qj7E7OvtI9"
    },
