Removed unused imports and variables

--- a/1.train_models/log_reg_plate_2_cp_fs_data/train_model.ipynb
+++ b/1.train_models/log_reg_plate_2_cp_fs_data/train_model.ipynb
@@ -23,36 +23,25 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:37:33.881319Z",
-     "iopub.status.busy": "2023-06-27T21:37:33.881042Z",
-     "iopub.status.idle": "2023-06-27T21:37:34.456318Z",
-     "shell.execute_reply": "2023-06-27T21:37:34.455809Z"
+     "iopub.execute_input": "2023-06-29T21:13:43.110542Z",
+     "iopub.status.busy": "2023-06-29T21:13:43.110446Z",
+     "iopub.status.idle": "2023-06-29T21:13:43.488719Z",
+     "shell.execute_reply": "2023-06-29T21:13:43.488323Z"
     },
     "jukit_cell_id": "FKd1dIo45E"
    },
    "outputs": [],
    "source": [
-    "import sys\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
-    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "from sklearn.metrics import (\n",
-    "    confusion_matrix,\n",
-    "    ConfusionMatrixDisplay,\n",
-    "    precision_score,\n",
-    "    accuracy_score,\n",
-    "    classification_report,\n",
-    ")\n",
     "from sklearn.model_selection import train_test_split, KFold\n",
-    "from collections import Counter\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "\n",
-    "from joblib import dump, load"
+    "from joblib import dump"
    ]
   },
   {
@@ -69,10 +58,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:37:34.458305Z",
-     "iopub.status.busy": "2023-06-27T21:37:34.458134Z",
-     "iopub.status.idle": "2023-06-27T21:37:34.460916Z",
-     "shell.execute_reply": "2023-06-27T21:37:34.460530Z"
+     "iopub.execute_input": "2023-06-29T21:13:43.490244Z",
+     "iopub.status.busy": "2023-06-29T21:13:43.490033Z",
+     "iopub.status.idle": "2023-06-29T21:13:43.492688Z",
+     "shell.execute_reply": "2023-06-29T21:13:43.492387Z"
     },
     "jukit_cell_id": "Iz4nqgONsd"
    },
@@ -110,10 +99,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:37:34.462666Z",
-     "iopub.status.busy": "2023-06-27T21:37:34.462395Z",
-     "iopub.status.idle": "2023-06-27T21:37:34.464457Z",
-     "shell.execute_reply": "2023-06-27T21:37:34.464131Z"
+     "iopub.execute_input": "2023-06-29T21:13:43.493921Z",
+     "iopub.status.busy": "2023-06-29T21:13:43.493634Z",
+     "iopub.status.idle": "2023-06-29T21:13:43.495566Z",
+     "shell.execute_reply": "2023-06-29T21:13:43.495276Z"
     },
     "jukit_cell_id": "EBc3nCzByb"
    },
@@ -137,10 +126,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:37:34.465995Z",
-     "iopub.status.busy": "2023-06-27T21:37:34.465715Z",
-     "iopub.status.idle": "2023-06-27T21:37:34.467878Z",
-     "shell.execute_reply": "2023-06-27T21:37:34.467588Z"
+     "iopub.execute_input": "2023-06-29T21:13:43.496735Z",
+     "iopub.status.busy": "2023-06-29T21:13:43.496532Z",
+     "iopub.status.idle": "2023-06-29T21:13:43.498642Z",
+     "shell.execute_reply": "2023-06-29T21:13:43.498353Z"
     },
     "jukit_cell_id": "EYGHUOxuTt"
    },
@@ -173,10 +162,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:37:34.469355Z",
-     "iopub.status.busy": "2023-06-27T21:37:34.469084Z",
-     "iopub.status.idle": "2023-06-27T21:37:34.499654Z",
-     "shell.execute_reply": "2023-06-27T21:37:34.499270Z"
+     "iopub.execute_input": "2023-06-29T21:13:43.499892Z",
+     "iopub.status.busy": "2023-06-29T21:13:43.499624Z",
+     "iopub.status.idle": "2023-06-29T21:13:43.530226Z",
+     "shell.execute_reply": "2023-06-29T21:13:43.529858Z"
     },
     "jukit_cell_id": "A8cPG2OifP"
    },
@@ -209,10 +198,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:37:34.501355Z",
-     "iopub.status.busy": "2023-06-27T21:37:34.501199Z",
-     "iopub.status.idle": "2023-06-27T21:37:34.503276Z",
-     "shell.execute_reply": "2023-06-27T21:37:34.502982Z"
+     "iopub.execute_input": "2023-06-29T21:13:43.531658Z",
+     "iopub.status.busy": "2023-06-29T21:13:43.531411Z",
+     "iopub.status.idle": "2023-06-29T21:13:43.533335Z",
+     "shell.execute_reply": "2023-06-29T21:13:43.533047Z"
     },
     "jukit_cell_id": "jH432rS91v"
    },
@@ -221,10 +210,8 @@
     "target_column = \"Metadata_genotype\"\n",
     "stratify_column = \"Metadata_Well\"\n",
     "\n",
-    "# These represent the fractions of the entire dataset\n",
-    "train_val_frac = 0.85\n",
-    "test_frac = 1 - train_val_frac\n",
-    "val_frac = 0.15"
+    "# The fraction of the dataset accounting for the train and validation sets\n",
+    "train_val_frac = 0.85"
    ]
   },
   {
@@ -241,10 +228,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:37:34.504544Z",
-     "iopub.status.busy": "2023-06-27T21:37:34.504276Z",
-     "iopub.status.idle": "2023-06-27T21:37:34.525420Z",
-     "shell.execute_reply": "2023-06-27T21:37:34.525011Z"
+     "iopub.execute_input": "2023-06-29T21:13:43.534645Z",
+     "iopub.status.busy": "2023-06-29T21:13:43.534426Z",
+     "iopub.status.idle": "2023-06-29T21:13:43.554790Z",
+     "shell.execute_reply": "2023-06-29T21:13:43.554435Z"
     },
     "jukit_cell_id": "6wLIrXfTzh"
    },
@@ -276,10 +263,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:37:34.526893Z",
-     "iopub.status.busy": "2023-06-27T21:37:34.526785Z",
-     "iopub.status.idle": "2023-06-27T21:37:34.533855Z",
-     "shell.execute_reply": "2023-06-27T21:37:34.533551Z"
+     "iopub.execute_input": "2023-06-29T21:13:43.556268Z",
+     "iopub.status.busy": "2023-06-29T21:13:43.555978Z",
+     "iopub.status.idle": "2023-06-29T21:13:43.563032Z",
+     "shell.execute_reply": "2023-06-29T21:13:43.562695Z"
     },
     "jukit_cell_id": "VNkswJFWjR"
    },
@@ -308,10 +295,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:37:34.535212Z",
-     "iopub.status.busy": "2023-06-27T21:37:34.535007Z",
-     "iopub.status.idle": "2023-06-27T21:37:34.538025Z",
-     "shell.execute_reply": "2023-06-27T21:37:34.537706Z"
+     "iopub.execute_input": "2023-06-29T21:13:43.564438Z",
+     "iopub.status.busy": "2023-06-29T21:13:43.564195Z",
+     "iopub.status.idle": "2023-06-29T21:13:43.567271Z",
+     "shell.execute_reply": "2023-06-29T21:13:43.566865Z"
     },
     "jukit_cell_id": "wqT9BUqx7w"
    },
@@ -320,13 +307,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_42312/4215398058.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_31761/4215398058.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  testdf[\"label\"] = le.fit_transform(testdf[target_column].values)\n",
-      "/tmp/ipykernel_42312/4215398058.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_31761/4215398058.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -355,10 +342,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:37:34.566214Z",
-     "iopub.status.busy": "2023-06-27T21:37:34.565835Z",
-     "iopub.status.idle": "2023-06-27T21:37:34.570255Z",
-     "shell.execute_reply": "2023-06-27T21:37:34.569989Z"
+     "iopub.execute_input": "2023-06-29T21:13:43.594316Z",
+     "iopub.status.busy": "2023-06-29T21:13:43.594183Z",
+     "iopub.status.idle": "2023-06-29T21:13:43.598169Z",
+     "shell.execute_reply": "2023-06-29T21:13:43.597808Z"
     },
     "jukit_cell_id": "UFK0jsur96"
    },
@@ -388,10 +375,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:37:34.571589Z",
-     "iopub.status.busy": "2023-06-27T21:37:34.571335Z",
-     "iopub.status.idle": "2023-06-27T21:37:34.574548Z",
-     "shell.execute_reply": "2023-06-27T21:37:34.574283Z"
+     "iopub.execute_input": "2023-06-29T21:13:43.599962Z",
+     "iopub.status.busy": "2023-06-29T21:13:43.599663Z",
+     "iopub.status.idle": "2023-06-29T21:13:43.603041Z",
+     "shell.execute_reply": "2023-06-29T21:13:43.602684Z"
     },
     "jukit_cell_id": "SnNRV5kCfc"
    },
@@ -455,10 +442,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:37:34.575769Z",
-     "iopub.status.busy": "2023-06-27T21:37:34.575515Z",
-     "iopub.status.idle": "2023-06-27T21:37:43.135160Z",
-     "shell.execute_reply": "2023-06-27T21:37:43.134685Z"
+     "iopub.execute_input": "2023-06-29T21:13:43.604541Z",
+     "iopub.status.busy": "2023-06-29T21:13:43.604270Z",
+     "iopub.status.idle": "2023-06-29T21:13:52.228165Z",
+     "shell.execute_reply": "2023-06-29T21:13:52.227702Z"
     },
     "jukit_cell_id": "4WFLztISAE"
    },
@@ -494,10 +481,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-27T21:37:43.137096Z",
-     "iopub.status.busy": "2023-06-27T21:37:43.136904Z",
-     "iopub.status.idle": "2023-06-27T21:37:43.144468Z",
-     "shell.execute_reply": "2023-06-27T21:37:43.144099Z"
+     "iopub.execute_input": "2023-06-29T21:13:52.229959Z",
+     "iopub.status.busy": "2023-06-29T21:13:52.229717Z",
+     "iopub.status.idle": "2023-06-29T21:13:52.235737Z",
+     "shell.execute_reply": "2023-06-29T21:13:52.235406Z"
     },
     "jukit_cell_id": "Qj7E7OvtI9"
    },
